Fixed small bug where .css files where not being loaded - Max Fixed footer not aligning properly - Max Fixed an overflow bug where empty space was added to the right even without there being a element - Max

--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,10 @@
     }
 }
 
+html{
+    overflow-x: hidden;
+}
+
 body{
     height: 100%;
     width: 100%;
@@ -75,7 +79,6 @@ nav a:hover{
 #wrapper{
     position: relative;
     z-index: 1;
-    height: 100%;
     padding: 0 !important;
     box-shadow: 0px 0px 10px 2px rgba(33,37,41,.05);
     margin-bottom: 0;
@@ -87,4 +90,8 @@ nav a:hover{
     margin-top: 5rem;
     background-color: white;
     box-shadow: 0px 0px 5px rgba(33,37,41,.1);
+}
+
+#footer > .container{
+    width: 100%;
 }
